add images to window

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -17,6 +17,7 @@
     window.dropdownIcon = "<%= image_url('dropdown_icon.svg') %>"
     window.searchIcon = "<%= image_url('search_icon.svg') %>"
     window.searchIconWhite = "<%= image_url('search_icon_white.svg') %>"
+    window.imageIcon = "<%= image_url('image_icon.svg') %>"
 </script>
 
 <% if logged_in? %>
