refactor code/improve design

--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -54,7 +54,7 @@ input {
     height: 22px;
 }
 
-.test {
+.splash-grey-background {
     background: #f8f7fa;
     position: absolute;
     bottom: 60px;
