--- a/app/assets/stylesheets/body.scss
+++ b/app/assets/stylesheets/body.scss
@@ -47,11 +47,13 @@ input {
 .share-icon {
     width: 22px;
     height: 22px;
+    cursor: pointer;
 }
 
 .heart-icon {
     width: 22px;
     height: 22px;
+    cursor: pointer;
 }
 
 .splash-grey-background {
