--- a/app/assets/stylesheets/event_show.scss
+++ b/app/assets/stylesheets/event_show.scss
@@ -120,6 +120,7 @@ $follow-button-border-radius: 5px;
     width: 55px;
     padding: 4px;
     margin-left: 10px;
+    cursor: pointer;
 }
 
 .icons {
