--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -11,7 +11,7 @@
 
 .event-card {
     width: 32%;
-    border-radius: 5px;
+    border-radius: 3px;
     margin-bottom: 2%;
 
     .event-card-picture {
@@ -19,41 +19,32 @@
         background-size: cover;
         border-radius: 5px;
     }
+
     .event-card-details {
         height: 150px;
-    }
-    .event-card-details {
+        padding-top: 5px;
+
         .card-buttons {
             text-align: right;
             margin-right: 10px;
             position: relative;
-            bottom: 20px;
+            bottom: 25px;
             height: 0px;
             margin-bottom: 20px;
 
-            .event-card-share-button {
-                width: 45px;
-                height: 45px;
+            .event-card-button {
+                width: 40px;
+                height: 40px;
                 margin: 0 5px;
                 border-radius: 40px;
                 border: 1px #efeef3 solid;
+                cursor: pointer;
                 
-                .share-icon-img {
+                .card-button-img {
                     width: 18px;
                 }
             }
-            .event-card-heart-button {
-                width: 45px;
-                height: 45px;
-                background-color: white;
-                margin: 0 5px;
-                border-radius: 40px;
-                border: 1px #efeef3 solid;
-                
-                .heart-icon-img {
-                    width: 18px;
-                }
-            }   
+             
         }
         .date-span {
             width: 20%;
@@ -76,7 +67,7 @@
             flex-direction: column;
 
             .card-title {
-                font-size: 20px;
+                font-size: 18px;
                 font-weight: bold;
             }
 
@@ -87,11 +78,15 @@
             }
         }
     }
+
+    .event-card-details:hover {
+        background: #FFFFFF;
+    }
 }
 
 .event-card:hover {
     box-shadow: -2px 3px 10px #d9d9d9;
-    transition: box-shadow .5s;
+    transition: box-shadow .2s;
 }
 
 .splash-content {
