strap image to window

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,23 +1,24 @@
 <main id='root'></main>
 
 <script type="text/javascript">
-    window.logo = "<%= image_url('logo_orange.png') %>"
-    window.signinIcon = "<%= image_url('signin_icon.svg') %>"
-    window.splashBanner = "<%= image_url('splash_banner.jpg') %>"
-    window.splashBanner2 = "<%= image_url('splash_banner_2.jpg') %>"
-    window.photoBalloons = "<%= image_url('photo_balloons.jpg') %>"
-    window.logoWhiteFull = "<%= image_url('logo_white_full.png') %>"
-    window.textIcon = "<%= image_url('text_icon.svg') %>"
-    window.mapIcon = "<%= image_url('map_icon.svg') %>"
-    window.calendarIcon = "<%= image_url('calendar_icon.svg') %>"
-    window.shareIcon = "<%= image_url('share_icon.svg') %>"
-    window.heartIcon = "<%= image_url('heart_icon.svg') %>"
-    window.closeIcon = "<%= image_url('close_icon.svg') %>"
-    window.checkIcon = "<%= image_url('check_icon.svg') %>"
-    window.dropdownIcon = "<%= image_url('dropdown_icon.svg') %>"
-    window.searchIcon = "<%= image_url('search_icon.svg') %>"
-    window.searchIconWhite = "<%= image_url('search_icon_white.svg') %>"
-    window.imageIcon = "<%= image_url('image_icon.svg') %>"
+    window.logo = "<%= image_url('logo_orange.png') %>";
+    window.signinIcon = "<%= image_url('signin_icon.svg') %>";
+    window.splashBanner = "<%= image_url('splash_banner.jpg') %>";
+    window.splashBanner2 = "<%= image_url('splash_banner_2.jpg') %>";
+    window.photoBalloons = "<%= image_url('photo_balloons.jpg') %>";
+    window.logoWhiteFull = "<%= image_url('logo_white_full.png') %>";
+    window.textIcon = "<%= image_url('text_icon.svg') %>";
+    window.mapIcon = "<%= image_url('map_icon.svg') %>";
+    window.calendarIcon = "<%= image_url('calendar_icon.svg') %>";
+    window.shareIcon = "<%= image_url('share_icon.svg') %>";
+    window.redHeartIcon = "<%= image_url('red_heart_icon.svg') %>";
+    window.heartIcon = "<%= image_url('heart_icon.svg') %>";
+    window.closeIcon = "<%= image_url('close_icon.svg') %>";
+    window.checkIcon = "<%= image_url('check_icon.svg') %>";
+    window.dropdownIcon = "<%= image_url('dropdown_icon.svg') %>";
+    window.searchIcon = "<%= image_url('search_icon.svg') %>";
+    window.searchIconWhite = "<%= image_url('search_icon_white.svg') %>";
+    window.imageIcon = "<%= image_url('image_icon.svg') %>";
 </script>
 
 <% if logged_in? %>
