--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -38,6 +38,7 @@
                 margin: 0 5px;
                 border-radius: 40px;
                 border: 1px #efeef3 solid;
+                outline: none;
                 cursor: pointer;
                 
                 .card-button-img {
