--- a/app/assets/stylesheets/event_dashboard.scss
+++ b/app/assets/stylesheets/event_dashboard.scss
@@ -169,8 +169,8 @@ $red: 1px red solid;
     padding: 5px;
 
     img {
-        width: 6%;
-        padding-left: 10px;
+        width: 15px;
+        padding: 0px 10px;
     }
 
     input, select {
@@ -178,6 +178,7 @@ $red: 1px red solid;
         padding: 5px;
         width: 100%;
         height: 20px;
+        cursor: text;
         background: transparent;
         outline: none;
         border: none;
