--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -15,10 +15,12 @@
     window.heartIcon = "<%= image_url('heart_icon.svg') %>";
     window.closeIcon = "<%= image_url('close_icon.svg') %>";
     window.checkIcon = "<%= image_url('check_icon.svg') %>";
+    window.checkIconBlack = "<%= image_url('check_icon_black.svg') %>";
     window.dropdownIcon = "<%= image_url('dropdown_icon.svg') %>";
     window.searchIcon = "<%= image_url('search_icon.svg') %>";
     window.searchIconWhite = "<%= image_url('search_icon_white.svg') %>";
     window.imageIcon = "<%= image_url('image_icon.svg') %>";
+    window.selectArrow = "<%= image_url('select_arrow.svg') %>";
 </script>
 
 <% if logged_in? %>
