add white close icon

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,6 +14,7 @@
     window.redHeartIcon = "<%= image_url('red_heart_icon.svg') %>";
     window.heartIcon = "<%= image_url('heart_icon.svg') %>";
     window.closeIcon = "<%= image_url('close_icon.svg') %>";
+    window.closeIconWhite = "<%= image_url('close_icon_white.svg') %>";
     window.checkIcon = "<%= image_url('check_icon.svg') %>";
     window.checkIconBlack = "<%= image_url('check_icon_black.svg') %>";
     window.dropdownIcon = "<%= image_url('dropdown_icon.svg') %>";
