--- a/app/assets/stylesheets/event_index.scss
+++ b/app/assets/stylesheets/event_index.scss
@@ -1,6 +1,6 @@
-html, body, #root {
-    overflow: auto;
-}
+// html, body, #root {
+//     overflow: auto;
+// }
 
 .event-index {
     margin: auto;
