add white select arrow to window

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -22,6 +22,7 @@
     window.searchIconWhite = "<%= image_url('search_icon_white.svg') %>";
     window.imageIcon = "<%= image_url('image_icon.svg') %>";
     window.selectArrow = "<%= image_url('select_arrow.svg') %>";
+    window.selectArrowWhite = "<%= image_url('select_arrow_white.svg') %>";
 </script>
 
 <% if logged_in? %>
