--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,6 @@
 
   <body>
     <%= yield %>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChzMJPuKYv_BNHT1LAei16kDcohpRYX-U&libraries=places"></script>
   </body>
 </html>
