--- a/app/assets/stylesheets/content_block.scss
+++ b/app/assets/stylesheets/content_block.scss
@@ -23,7 +23,7 @@
     }
 
     .content-block-image {
-        width: 6%;
+        width: 35px;
         height: 4%;
         position: relative;
         top: 10px;
