--- a/app/assets/stylesheets/event_dashboard.scss
+++ b/app/assets/stylesheets/event_dashboard.scss
@@ -214,6 +214,7 @@ $red: 1px red solid;
         display: flex;
         // align-items: center;
         justify-content: space-between;
+        padding-right: 5px;
 
         > * {
             margin-right: 5px;
