--- a/app/assets/stylesheets/helper_components.scss
+++ b/app/assets/stylesheets/helper_components.scss
@@ -66,29 +66,11 @@ $purple: #1e0a3c;
     height: 200px;
 }
 
-// text editor 
+// details page text editor  
 .text-editor {
     width: 40%;
-    margin-left: 68px;
+    margin-left: 58px;
     outline: none;
-
-    header {
-        display: flex;
-        justify-content: space-between;
-        border: 1px black solid;
-        width: 100%;
-        height: 40px;
-    }
-    span {
-        cursor: pointer;
-    }
-
-    .editor-right {
-        display: flex;
-        justify-content: space-around;
-        width: 10%;
-    }
-
 }
 
 // modal 
@@ -276,8 +258,10 @@ $purple: #1e0a3c;
 }
 
 // checkbar from dashboard   
-.checkbar-selected {
+a.checkbar-selected {
     background-color: white;
+    color: #000000;
+    font-weight: bold;
 }
 
 // splashpage searchbar 
@@ -357,6 +341,15 @@ $purple: #1e0a3c;
             top: 8px;
             right: 22px;
         }
+    }
+
+    .search-bar-input-location {
+        cursor: default;
+    }
+    
+    .search-bar-input-location:focus {
+        color: transparent;
+        text-shadow: 0px 0px 0px #FFFFFF;
     }
 }
 
