--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -72,7 +72,7 @@ $navbar-text: #717388;
     position: absolute;
     right: 0px;
     border: 1px #f8f7fa solid;
-    box-shadow: -2px 3px 10px #b3b3b3;
+    box-shadow: -2px 3px 10px #e6e6e6;
     background: white;
     z-index: 3;
 
