--- a/app/assets/stylesheets/helper_components.scss
+++ b/app/assets/stylesheets/helper_components.scss
@@ -523,4 +523,23 @@ a.checkbar-selected {
     transition: border .2s;
 }
 
+// tag-button
+.tag-button {
+    display: inline-block;
+    background-color: #f8f7fa;
+    padding: 8px 12px;
+    border-radius: 18px;
+    margin-right: 15px;
+    margin: 5px 15px 5px 0px;
+    font-size: 13px;
+    
+    img {
+        width: 12px;
+        cursor: pointer;
+        position: relative;
+        top: 1px;
+        margin-left: 10px;
+    }
+}
+
 
