--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -6,13 +6,13 @@
 .events-cards {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .event-card {
     width: 32%;
     border-radius: 3px;
     margin-bottom: 2%;
+    margin-right: 1.3%;
 
     .event-card-picture {
         height: 190px;
